--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -128,6 +128,9 @@ cookie_secure = false
 session_life_time = 86400
 gc_interval_time = 86400
 
+# Connection Max Lifetime default is 14400 (means 14400 seconds or 4 hours)
+conn_max_lifetime = 14400
+
 #################################### Data proxy ###########################
 [dataproxy]
 
