--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -201,3 +201,7 @@ ignored = [
 [[constraint]]
   name = "github.com/denisenkom/go-mssqldb"
   revision = "270bc3860bb94dd3a3ffd047377d746c5e276726"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/leibowitz/moment"
