--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,12 @@ jobs:
           name: install codespell
           command: 'sudo pip install codespell'
       - run:
+          # Important: all words have to be in lowercase, and separated by "\n".
+          name: exclude known exceptions
+          command: 'echo -e "unknwon" > words_to_ignore.txt'
+      - run:
           name: check documentation spelling errors
-          command: 'codespell -x docs/sources/project/building_from_source.md docs/'
+          command: 'codespell -I ./words_to_ignore.txt docs/'
 
   test-frontend:
     docker:
