--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,22 @@ jobs:
           name: check documentation spelling errors
           command: 'codespell -I ./words_to_ignore.txt docs/'
 
+  gometalinter:
+    docker:
+      - image: circleci/golang:1.10
+    working_directory: /go/src/github.com/grafana/grafana
+    steps:
+      - checkout
+      - run:
+          name: install gometalinter tool
+          command: 'go get -u github.com/alecthomas/gometalinter'
+      - run:
+          name: install linters
+          command: 'gometalinter --install'
+      - run:
+          name: run some linters
+          command: 'gometalinter --vendor --deadline 6m --disable-all --enable=structcheck --enable=unconvert --enable=varcheck ./...'
+
   test-frontend:
     docker:
       - image: circleci/node:6.11.4
@@ -120,6 +136,10 @@ workflows:
   test-and-build:
     jobs:
       - codespell:
+          filters:
+            tags:
+              only: /.*/
+      - gometalinter:
           filters:
             tags:
               only: /.*/
