--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,6 +93,22 @@ jobs:
             - scripts/*.sh
             - scripts/publish
 
+  build-enterprise:
+    docker:
+     - image: grafana/build-container:v0.1
+    working_directory: /go/src/github.com/grafana/grafana
+    steps:
+      - checkout
+      - run:
+          name: build and package grafana
+          command: './scripts/build/build_enterprise.sh'
+      - run:
+          name: sign packages
+          command: './scripts/build/sign_packages.sh'
+      - run:
+          name: sha-sum packages
+          command: 'go run build.go sha-dist'
+
   deploy-master:
     docker:
       - image: circleci/python:2.7-stretch
@@ -176,3 +192,7 @@ workflows:
               ignore: /.*/
             tags:
               only: /^v[0-9]+(\.[0-9]+){2}(-.+|[^-.]*)$/
+      - build-enterprise:
+          filters:
+            tags:
+              only: /.*/
