disable ent build to avoid slowing down build speed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ workflows:
               ignore: /.*/
             tags:
               only: /^v[0-9]+(\.[0-9]+){2}(-.+|[^-.]*)$/
-      - build-enterprise:
-          filters:
-            tags:
-              only: /.*/
+      # - build-enterprise:
+      #     filters:
+      #       tags:
+      #         only: /.*/
