--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,10 +70,13 @@ jobs:
 
   build:
     docker:
-     - image: grafana/build-container:v0.1
+     - image: grafana/build-container:crosscompile
     working_directory: /go/src/github.com/grafana/grafana
     steps:
       - checkout
+      - run:
+          name: prepare build tools
+          command: '/tmp/bootstrap.sh'
       - run:
           name: build and package grafana
           command: './scripts/build/build.sh'
