--- a/package.json
+++ b/package.json
@@ -134,11 +134,11 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "angular": "^1.6.6",
+    "angular": "1.6.6",
     "angular-bindonce": "^0.3.1",
     "angular-native-dragdrop": "^1.2.2",
-    "angular-route": "^1.6.6",
-    "angular-sanitize": "^1.6.6",
+    "angular-route": "1.6.6",
+    "angular-sanitize": "1.6.6",
     "babel-polyfill": "^6.26.0",
     "baron": "^3.0.3",
     "brace": "^0.10.0",
@@ -161,7 +161,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-grid-layout-grafana": "0.16.0",
+    "react-grid-layout": "0.16.6",
     "react-highlight-words": "^0.10.0",
     "react-popper": "^0.7.5",
     "react-select": "^1.1.0",
