provisioning: enable relative path's
this commit enable relatives path for provisioning dashboards.
this enables easier dev setups

--- a/devenv/dashboards/bulk-testing/bulk-dashboards.yaml
+++ b/devenv/dashboards/bulk-testing/bulk-dashboards.yaml
@@ -5,5 +5,5 @@ providers:
    folder: 'Bulk dashboards'
    type: file
    options:
-     path: /home/carl/go/src/github.com/grafana/grafana/devenv/dashboards/bulk-testing
+     path: devenv/dashboards/bulk-testing
 
