--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,26 @@ aliases:
 version: 2
 
 jobs:
+  mysql-integration-test:
+    docker:
+      - image: circleci/golang:1.10
+      - image: circleci/mysql:5.6-ram
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpass
+          MYSQL_DATABASE: grafana_tests
+          MYSQL_USER: grafana
+          MYSQL_PASSWORD: password
+    working_directory: /go/src/github.com/grafana/grafana
+    steps:
+        - checkout
+        - run: sudo apt update
+        - run: sudo apt install -y mysql-client
+        - run: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
+        - run: cat docker/blocks/mysql_tests/setup.sql | mysql -h 127.0.0.1 -P 3306 -u root -prootpass
+        - run:
+            name: mysql integration tests
+            command: 'GRAFANA_TEST_DB=mysql go test ./pkg/...'
+
   codespell:
     docker:
       - image: circleci/python
@@ -188,6 +208,8 @@ workflows:
           filters: *filter-not-release
       - test-backend:
           filters: *filter-not-release
+      - mysql-integration-test:
+          filters: *filter-not-release
       - deploy-master:
           requires:
             - build-all
@@ -195,6 +217,7 @@ workflows:
             - test-frontend
             - codespell
             - gometalinter
+            - mysql-integration-test
           filters:
             branches:
               only: master
@@ -210,6 +233,8 @@ workflows:
           filters: *filter-only-release
       - test-backend:
           filters: *filter-only-release
+      - mysql-integration-test:
+          filters: *filter-only-release
       - deploy-release:
           requires:
             - build-all
@@ -217,4 +242,5 @@ workflows:
             - test-frontend
             - codespell
             - gometalinter
+            - mysql-integration-test
           filters: *filter-only-release
