--- a/pkg/services/provisioning/dashboards/testdata/test-configs/version-0/version-0.yaml
+++ b/pkg/services/provisioning/dashboards/testdata/test-configs/version-0/version-0.yaml
@@ -3,7 +3,7 @@
   folder: 'developers'
   editable: true
   disableDeletion: true
-  intervalSeconds: 10
+  updateIntervalSeconds: 10
   type: file
   options:
     path: /var/lib/grafana/dashboards
