Use cut to trim down the SHA1.
Signed-off-by: Tom Wilkie <tom.wilkie@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,18 +185,18 @@ jobs:
           name: deploy to s3
           command: |
             # Also
-            cp dist/grafana-latest.linux-x64.tar.gz dist/grafana-master-${CIRCLE_SHA1:7}.linux-x64.tar.gz
+            cp dist/grafana-latest.linux-x64.tar.gz dist/grafana-master-$(echo "${CIRCLE_SHA1}" | cut -b1-7).linux-x64.tar.gz
             aws s3 sync ./dist s3://$BUCKET_NAME/master
       - run:
           name: Trigger Windows build
           command: './scripts/trigger_windows_build.sh ${APPVEYOR_TOKEN} ${CIRCLE_SHA1} master'
       - run:
           name: Trigger Docker build
-          command: './scripts/trigger_docker_build.sh ${TRIGGER_GRAFANA_PACKER_CIRCLECI_TOKEN} master-${CIRCLE_SHA1:7}'
+          command: './scripts/trigger_docker_build.sh ${TRIGGER_GRAFANA_PACKER_CIRCLECI_TOKEN} master-$(echo "${CIRCLE_SHA1}" | cut -b1-7)'
       - run:
           name: Publish to Grafana.com
           command: |
-            rm dist/grafana-master-${CIRCLE_SHA1:7}.linux-x64.tar.gz
+            rm dist/grafana-master-$(echo "${CIRCLE_SHA1}" | cut -b1-7).linux-x64.tar.gz
             ./scripts/publish -apiKey ${GRAFANA_COM_API_KEY}
 
   deploy-release:
