--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,9 +245,9 @@ workflows:
             - gometalinter
             - mysql-integration-test
             - postgres-integration-test
-          #filters:
-          #  branches:
-          #    only: master
+          filters:
+           branches:
+             only: master
   release:
     jobs:
       - build-all:
