--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -15,7 +15,7 @@
 ;data = /var/lib/grafana
 
 # Temporary files in `data` directory older than given duration will be removed
-temp_data_lifetime = 24h
+;temp_data_lifetime = 24h
 
 # Directory where grafana can store logs
 ;logs = /var/log/grafana
